gcc/testsuite/g++.dg/parse/cond1.C
// PR c++/18389

void foo()
{
  for (; struct A {}; ); // { dg-error "" }
}
